--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,12 +6,10 @@
 
 <ion-content padding>
   <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <button ion-button (click)="presentActionSheet()">Button</button>
+
+  <button ion-button (click)="action2()">Action 2</button>
+
+  <button ion-button (click)="geolocationClick()">Geo location</button>
+  <button ion-button (click)="fileclick()">start file</button>
 </ion-content>
